# ml-scratch-bench

./: CMakeLists.txt  Makefile  README.md
cpu/: ml_cpu  ml_cpu.cpp
cuda/: ml_cuda.cu
results/: combined_results.csv  cpu_results.csv  cuda_results.csv  speedup_summary.csv
scripts/: plot_results.py  run_benchmark.sh
